# vision

./: .gitignore  .gitmodules  README.md  Vision_readme.md  call_variants.py  candidate_finder.py  candidate_finder_better.py  filter_labeled_candidate_generator.py  filter_labeled_image_generator.py  filter_predict_image_generator.py  generate_images.py  generate_images_new.py  hyperparameter_tuning.py  labeled_image_generator.py  log_split_data.py  parallel_kmer_analysis.py  predict.py  predict_fake.py  predict_image_generator.py  sequence_generator.py  sequence_generator_train.py  subset_VCF_by_FN.py  test.py  test_BAM_allele_representation.py  test_SplitDatasetLoader.py  test_alignment_graph.py  test_bed_interval_length_distribution.py  test_by_vcf.py  test_cleanup_algorithm.py  test_kmer_analysis.py  test_kmer_graph.py  test_labeled_alignment_graph.py  test_labeled_kmer_graph.py  test_matrix.tsv  test_matrix_label.tsv  test_node_stats.py  test_parallel_node_stats.py  test_parallel_node_stats_Guppy_vs_Albacore_vs_GIAB.py  test_positional_kmer_graph.py  test_vcf_graph.py  (+9 more)
analysis/: analyze_png_img.py  class_distribution_csv.py  columnwise_distribution_plot.py  conf_viz.py  csv_analyzer.py  downsample_csv.py  hdf5_analyzer.py  plot_loss_function.py  prediction_proability_distribution.py
models/: filter_model_state
modules/aligner/: CMakeLists.txt  build.sh  py_test.py  ssw_api.cpp  ssw_cpp.cpp
modules/core/: ActiveRegionFinder.py  AlignGraphCandidateFinder.py  AlignmentGraph.py  AlignmentGraphLabeler.py  CandidateFinder.py  (+33 more)
unit_test/: candidate_finder_test.py
(+26 files in other folders)
